errorlog.txt
src/logica.c: In function ‘crearPartida’:
src/logica.c:30:39: error: expected ‘)’ before ‘;’ token
   GAME_inserir (partida->deck, deck[i];
                                       ^
src/logica.c:30:17: error: incompatible type for argument 1 of ‘GAME_inserir’
   GAME_inserir (partida->deck, deck[i];
                 ^
In file included from inc/logica.h:20:0,
                 from src/logica.c:11:
inc/game.h:33:6: note: expected ‘Game * {aka struct <anonymous> *}’ but argument is of type ‘Game {aka struct <anonymous>}’
 void GAME_inserir (Game *g, Ficha e);
      ^
src/logica.c:31:2: error: expected ‘;’ before ‘}’ token
  } 
  ^
